Gallery 1.4.0

	* Added support for videos, music, and any arbitrary file.
	* Added integration with jPlayer to provide an inline video player.
	* Set the gallery listing page to respect access permissions.
	* Fixed some of the exif data, (if the image has exif data, but it's blank).

Gallery 1.3.3

	* Tweaked the default styles a little
	* Minor maintenance updates to keep current.
	-- Charlie Powell <charlie@eval.bz>  5 Nov 2012

Gallery 1.3.2

	* Fixed the GPS longitude value
	* Fixed a minor issue with exif data if the phone reports GPS data, but didn't provide any.
	* Fixed the exif display for exposure times > 1 second
	* Fixed the exif data for weird exposure times such as 833/10000.
	* Set the GPS coordinates to return fuzzy results, (city/state only), if the user is not a manager of that gallery.
	-- Charlie Powell <charlie@eval.bz>  17 Oct 2012

Gallery 1.3.1

	* Fixed the access permissions, it was not propagating down to the images correctly.
	* Tweaked some of the default styles a little.
	-- Charlie Powell <charlie@eval.bz>  15 Oct 2012

Gallery 1.3.0

	* Added image sorting to the album
	* Added exif data display on image views
	* Added a changelog
	* Fixed some of the javascript used on the view and view-image page
	* Completely retooled the view image template
	* Reorganized the controller a little bit
	-- Charlie Powell <charlie@eval.bz>  14 Oct 2012


Gallery 1.2.0

	* Added loading of exif data from images into the datastore.
	-- Charlie Powell <charlie@eval.bz>  07 Sep 2012


Gallery 1.1.1
	-- Charlie Powell <charlie@eval.bz>  02 Aug 2012


Gallery 1.1.0
	-- Charlie Powell <charlie@eval.bz>  27 Jul 2012


Gallery 1.0.0
	-- Charlie Powell <charlie@eval.bz>  16 Jul 2012